proxy - cors -refactoring